Add user edit password + fixes
